--- a/build.xml
+++ b/build.xml
@@ -72,7 +72,7 @@
 
     -->
     <target name="-post-jar">
-        <jar jarfile="${dist.dir}/JavaFTD2XX-${project.version}.jar">
+        <jar jarfile="${dist.dir}/JavaFTD2XX-${project.version}-r1.jar">
             <zipfileset src="${dist.jar}" excludes="META-INF/*" />
             <zipfileset src="lib/jna.jar" excludes="META-INF/*" />
             <fileset dir="native/" />
